# projects

./: .gitignore  README
.NET/lambda/: README.md
C++/NewtonsApples/: Makefile  NewtAppWrap3D  NewtonApple_hull3D.cpp  NewtonApple_hull3D.h  control.cpp  cube.txt  enneaconta.txt  pts.mat  redundant_cube.txt  tetartoid.txt  triangles.mat
C++/dad_cubes/: cubes.c
C++/dad_taxiMetric/: 1000.txt  cost.c  cost.exe.stackdump  gen.c  test.c
C++/dad_tilePuzzle/: bits1.c  bits10.c  bits11.c  bits12.c  bits13.c  bits14.c  bits15.c  bits16.c  bits17.c  bits18.c  bits2.c  bits3.c  bits4.c  bits5.c  bits6.c  bits7.c  bits9.c  dopiece.c  dopiece1.c  input.txt  output.txt  place1.c  solshow7.c  symbits8.c
C++/fib/: Fibonacci.cpp
C++/fractint/: BCAUTO.BAT  BCFRACT.BAT  BCFRACT.CFG  BCFRACT.DOC  BCFRACT.MAK  BCFRACT2.CFG  BCHC.LNK  BCLINKF.BAT  BCMAKALL.BAT  BIGNUMA.ASM  BIGPORT.H  (+31 more)
html5/: SliderTest.code-workspace
node/: example.js
python/simCapture/: .gitignore  README.md  pyproject.toml
python/simCapture/.codex/environments/: environment.toml
python/simCapture/simcapture/: __init__.py  __main__.py  app.py  cli.py  editor.py  platform.py  recorder.py
python/simCapture/simcapture/capture/: screen.py
python/simCapture/simcapture/diff/: detector.py
python/simCapture/simcapture/input/: hooks.py
python/simCapture/simcapture/model/: session.py
python/simCapture/simcapture/ui/: overlay.py
python/simCapture/simcapture/viewer/: index.html  viewer.css  viewer.js
python/simCapture/tests/: test_bundle_validation.py  test_diff_detector.py  test_manifest_helpers.py
(+1940 files in other folders)
